@@ -8,12 +8,13 @@ import honeyroasted.jype.type.TypeParameter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ForceResolveTypeSolver extends AbstractTypeSolver {
 
     @Override
     public TypeSolution solve() {
-        List<TypeConstraint> constraints = this.constraints.stream().map(TypeConstraint::flatten).toList();
+        List<TypeConstraint> constraints = this.constraints.stream().map(TypeConstraint::flatten).collect(Collectors.toList());
 
         if (constraints.isEmpty()) {
             return new TypeSolution(new TypeContext(), root().flatten(), Collections.emptyList(), true);
@@ -31,23 +32,25 @@ public class ForceResolveTypeSolver extends AbstractTypeSolver {
     }
 
     private static TypeConstraint forceResolve(TypeConstraint constraint) {
-        if (constraint instanceof TypeConstraint.And and) {
+        if (constraint instanceof TypeConstraint.And) {
+            TypeConstraint.And and = (TypeConstraint.And) constraint;
             return forceResolve(and);
-        } else if (constraint instanceof TypeConstraint.Or or) {
+        } else if (constraint instanceof TypeConstraint.Or) {
+            TypeConstraint.Or or = (TypeConstraint.Or) constraint;
             return forceResolve(or);
-        } else if (constraint instanceof TypeConstraint.Equal equal) {
-            return forceResolve(equal);
-        } else if (constraint instanceof TypeConstraint.Bound bound) {
-            return forceResolve(bound);
-        } else if (constraint instanceof TypeConstraint.Not not) {
-            return forceResolve(not);
+        } else if (constraint instanceof TypeConstraint.Equal) {
+            return forceResolve((TypeConstraint.Equal) constraint);
+        } else if (constraint instanceof TypeConstraint.Bound) {
+            return forceResolve((TypeConstraint.Bound) constraint);
+        } else if (constraint instanceof TypeConstraint.Not) {
+            return forceResolve((TypeConstraint.Not) constraint);
         } else {
             return constraint;
         }
     }
 
     private static TypeConstraint forceResolve(TypeConstraint.And and) {
-        List<TypeConstraint> resolved = and.constraints().stream().map(ForceResolveTypeSolver::forceResolve).toList();
+        List<TypeConstraint> resolved = and.constraints().stream().map(ForceResolveTypeSolver::forceResolve).collect(Collectors.toList());
         if (resolved.stream().anyMatch(c -> c instanceof TypeConstraint.False)) {
             return TypeConstraint.FALSE;
         } else if (resolved.stream().allMatch(c -> c instanceof TypeConstraint.True)) {
@@ -60,7 +63,7 @@ public class ForceResolveTypeSolver extends AbstractTypeSolver {
     }
 
     private static TypeConstraint forceResolve(TypeConstraint.Or or) {
-        List<TypeConstraint> resolved = or.constraints().stream().map(ForceResolveTypeSolver::forceResolve).toList();
+        List<TypeConstraint> resolved = or.constraints().stream().map(ForceResolveTypeSolver::forceResolve).collect(Collectors.toList());
         if (resolved.stream().anyMatch(c -> c instanceof TypeConstraint.True)) {
             return TypeConstraint.TRUE;
         } else if (resolved.stream().allMatch(c -> c instanceof TypeConstraint.False)) {
@@ -77,12 +80,12 @@ public class ForceResolveTypeSolver extends AbstractTypeSolver {
     }
 
     private static TypeConstraint forceResolve(TypeConstraint.Bound bound) {
-        if (bound.subtype() instanceof TypeParameter a && bound.parent() instanceof TypeParameter b) {
-            return forceResolve(a.bound().assignabilityTo(b.bound()));
-        } else if (bound.subtype() instanceof TypeParameter prm) {
-            return forceResolve(prm.bound().assignabilityTo(bound.parent()));
-        } else if (bound.parent() instanceof TypeParameter prm) {
-            return forceResolve(bound.subtype().assignabilityTo(prm.bound()));
+        if (bound.subtype() instanceof TypeParameter && bound.parent() instanceof TypeParameter) {
+            return forceResolve(((TypeParameter) bound.subtype()).bound().assignabilityTo(((TypeParameter) bound.parent()).bound()));
+        } else if (bound.subtype() instanceof TypeParameter) {
+            return forceResolve(((TypeParameter) bound.subtype()).bound().assignabilityTo(bound.parent()));
+        } else if (bound.parent() instanceof TypeParameter) {
+            return forceResolve(bound.subtype().assignabilityTo(((TypeParameter) bound.parent()).bound()));
         } else {
             return forceResolve(bound.subtype().assignabilityTo(bound.parent()));
         }
