@@ -24,7 +24,7 @@ public class TypeAnd implements TypeConcrete {
 
     @Override
     public TypeString toSignature(TypeString.Context context) {
-        List<TypeString> args = this.types.stream().map(t -> t.toSignature(context)).toList();
+        List<TypeString> args = this.types.stream().map(t -> t.toSignature(context)).collect(Collectors.toList());
         return args.stream().filter(t -> !t.successful()).findFirst().orElseGet(() ->
                 TypeString.successful(args.stream().map(TypeString::value).collect(Collectors.joining(":"))));
     }
@@ -36,7 +36,7 @@ public class TypeAnd implements TypeConcrete {
 
     @Override
     public TypeString toSource(TypeString.Context context) {
-        List<TypeString> args = this.types.stream().map(t -> t.toSource(context)).toList();
+        List<TypeString> args = this.types.stream().map(t -> t.toSource(context)).collect(Collectors.toList());
         return args.stream().filter(t -> !t.successful()).findFirst().orElseGet(() ->
                 TypeString.successful(args.stream().map(TypeString::value).collect(Collectors.joining(" & "))));
     }
@@ -49,7 +49,7 @@ public class TypeAnd implements TypeConcrete {
 
     @Override
     public <T extends Type> T map(Function<TypeConcrete, TypeConcrete> mapper) {
-        return (T) mapper.apply(new TypeAnd(this.types.stream().map(t -> (TypeConcrete) t.map(mapper)).toList()));
+        return (T) mapper.apply(new TypeAnd(this.types.stream().map(t -> (TypeConcrete) t.map(mapper)).collect(Collectors.toList())));
     }
 
     public List<TypeConcrete> types() {
@@ -61,8 +61,8 @@ public class TypeAnd implements TypeConcrete {
             return TypeNone.VOID;
         } else if (this.types.size() == 1) {
             TypeConcrete type = this.types.get(0);
-            return type instanceof TypeAnd intersection ? intersection.flatten() :
-                    type instanceof TypeOr union ? union.flatten() :
+            return type instanceof TypeAnd ? ((TypeAnd) type).flatten() :
+                    type instanceof TypeOr ? ((TypeOr) type).flatten() :
                             type;
         } else {
             List<TypeConcrete> types = new ArrayList<>();
@@ -72,8 +72,8 @@ public class TypeAnd implements TypeConcrete {
     }
 
     private static void flatten(TypeConcrete type, List<TypeConcrete> types) {
-        if (type instanceof TypeAnd intersection) {
-            intersection.types().forEach(t -> flatten(t, types));
+        if (type instanceof TypeAnd) {
+            ((TypeAnd) type).types().forEach(t -> flatten(t, types));
         } else {
             types.add(type);
         }
@@ -81,7 +81,7 @@ public class TypeAnd implements TypeConcrete {
 
     @Override
     public TypeConstraint assignabilityTo(TypeConcrete other) {
-        return new TypeConstraint.Or(this.types.stream().map(t -> t.assignabilityTo(other)).toList());
+        return new TypeConstraint.Or(this.types.stream().map(t -> t.assignabilityTo(other)).collect(Collectors.toList()));
     }
 
     @Override
